--- a/Perfil Privado Vendedor/perfilprivadovendedor.css
+++ b/Perfil Privado Vendedor/perfilprivadovendedor.css
@@ -24,24 +24,24 @@ header{
 }
 
 .return svg{
-    width: 30px;
-    height: 30px;
+  width: 100%;
+  height: 100%;
 }
 
 .return{
-    width: 34px;
-    height: 34px;
-    padding: 2px;
-    margin-left: 10px;
-    position: absolute;
-    cursor: pointer;
-    z-index: 100;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    text-decoration: none;
-    color: #A7A7A7;
-    transition: color 0.0s ease;
+width: 3%;
+height: 6%;
+padding: 2px;
+margin-left: 2%;
+position: absolute;
+cursor: pointer;
+z-index: 100;
+background-color: transparent;
+border: none;
+outline: none;
+text-decoration: none;
+color: #A7A7A7;
+transition: color 0.0s ease;
 }
 
 .informationcomplet{
@@ -51,8 +51,6 @@ header{
 }
 
 .edit{
-    width: 40px;
-    height: 40px;
     padding: 8px;
     cursor: pointer;
     outline: none;
@@ -65,66 +63,77 @@ header{
     box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
   }
 
+.profile{
+  width: 18%;
+  margin-left: 1%;
+}
+
 .photo {
-    margin: 10px;
-    margin-bottom: 5px;
-    margin-left: 0px;
-    border-radius: 50%;
-    width: 180px;
-    height: 180px;
-    object-fit: cover;
-    background: #0a1319;
-    border: 2px solid #0A1319;
+  margin: 1%;
+  margin-bottom: 2%;
+  margin-left: 6%;
+  border-radius: 50%;
+  width: 70%;
+  height: 70%;
+  object-fit: cover;
+  background: #0a1319;
+  border: 2px solid #0A1319;
   object-fit: cover;
   }
 
 #editphoto{
-    margin-left: -20px;
+    margin-left: -2%;
 }
 
-  .calificación{
-    height: 180px;
-  }
+.calificación{
+  margin: 1%;
+  margin-top: 0;
+  width: 3.5%;
+  margin-right: 0;
+}
 
 .information{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 10px;
+    width: 30%;
 }
-
 
 .nombre{
     display: flex;
     align-items: center;
+    width: 95%;
 }
 
-  .name{
-    position: relative;
-    width: 350px;
-    height: 40px;
-    margin: 10px;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
-    border-radius: 5px;
-    background: #010B14;
-  }
+.name{
+  width: 100%;
+  height: auto;
+  padding: 1%;
+  margin-top: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
+  border-radius: 5px;
+  background: #010B14;
+}
+
+#editname, #editproffesion{
+  margin-left: 2%;
+}
 
   .profesion{
     display: flex;
     align-items: center;
+    width: 95%;
   }
 
   .proffession{
-    position: relative;
-    width: 350px;
-    height: 40px;
-    margin: 10px;
-    font-size: 18px;
+    width: 100%;
+    height: auto;
+    padding: 1%;
+    margin-top: 2%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -152,20 +161,25 @@ header{
   .descrip{
     display: flex;
     align-items: center;
+    width: 45%;
+    margin-right: 1%;
   }
 
 .description{
-    margin-top: 10px;
-    margin-right: 10px;
-    width: 450px;
-    height: 94px;
-    margin-left: 20px;
-    padding: 5px 10px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
-    border-radius: 5px;
-    background: #010B14;
+  margin-top: 2.3%;
+  margin-left: 2%;
+  margin-right: 1%;
+  width: 90%;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
+  border-radius: 5px;
+  background: #010B14;
+}
+
+#editdescripción{
+  margin-left: 1%;
 }
 
 .Space{
@@ -175,26 +189,34 @@ header{
 }
 
 .Opinions{
-overflow-y: auto;
-width: 800px;
-height: 200px;
-padding: 5px 10px;
-box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
-border-radius: 5px;
-background: #010B14;
+  overflow-y: auto;
+  width: 70%;
+  height: 200px;
+  padding: 5px 10px;
+  box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
+  border-radius: 5px;
+  background: #010B14;
+  }
+
+  .Textospublic{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .historiales{
-    margin-left: 20px;
-    width: 300px;
-    height: 140px;
+  display: flex;
+  width: 15%;
+  margin-right: 1%;
+    margin-left: 2%;
+    flex-direction: column;
 }
 
 .historial{
-    width: 300px;
-    height: 50px;
-    margin: 10px 0px;
-    font-size: 18px;
+    padding: 1%;
+    margin: 4% 0px;
+    width: 100%;
     cursor: pointer;
     outline: none;
     text-decoration: none;
@@ -206,19 +228,12 @@ background: #010B14;
     box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
 }
 
-.Textospublic{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
 .misp{
     position: relative;
-    width: 350px;
-    height: 40px;
-    margin: 15px;
-    font-size: 25px;
+    width: auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    margin: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -229,7 +244,8 @@ background: #010B14;
 }
 
 .crearp{
-    font-size: 18px;
+    margin: 1%;
+    width: 100%;
     cursor: pointer;
     outline: none;
     text-decoration: none;
@@ -242,33 +258,31 @@ background: #010B14;
 }
 
 .publicaciones{
-    margin-top: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; 
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 50;
+  justify-content: space-around; 
+  gap: 20px;
 }
 
 .publicacion{
-margin-right: 10px;
 margin-top: 10px;
-margin-left: 10px;
+margin-left: 1%;
+margin-right: 1%;
 margin-bottom: 30px;
-width: 550px;
+width: 46.5%;
 height: 265px;
 position: relative;
 border-radius: 5px;
 }
 
 .imgprin{
-margin-top: 5px;
-margin-left: 5px;
-margin-right: 5px;
+margin-top: 1%;
+margin-left: 1%;
+margin-right: 1%;
 border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 340px;
-height: 200px;
+width: 60%;
+height: 75%;
 object-fit: cover;
 position: absolute;
 top: 0;
@@ -280,37 +294,51 @@ justify-content: center;
 
 .secundaries{
 position: absolute;
-top: 0;
-left: 350px;
+left: 62%;
+height: 76%;
+width: 37%;
 display: flex;
 flex-direction: column;
-}
-
-.imgsec{
-margin-top: 5px;
-margin-right: 5px;
-border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 195px;
-height: 97.5px;
 object-fit: cover;
 }
 
-.descripcion{
-    margin: 5px;
-    width: 540px;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    background: #010b14;
-    border: 1px solid #031828;
-    box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+.imgsec{
+margin-top: 3%;
+margin-right: 1%;
+border-radius: 5px;
+width: 99%;
+height: 47.5%;
+object-fit: cover;
+}
+
+.infopubli{
+  width: 97%;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding-left: 10px;
+  border-radius: 5px;
+  background: #010b14;
+  border: 1px solid #031828;
+  box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+  text-align: left;
+}
+
+.titulop{
+margin: 0;
+height: 15px;
+}
+
+.descripcionp{
+  display: flex;
+justify-content: flex-start;
+margin: 0;
+margin-top: 5px;
+height: auto;
 }
 
 button:hover{
@@ -319,3 +347,290 @@ button:hover{
     transform: translateY(-2px);
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
+
+
+
+
+
+
+
+
+
+
+
+/*Para pantallas XL*/
+@media only screen and (min-width: 900px) {
+  .profile{
+    border: 2px solid red;
+  }
+
+  .edit{
+    width: 40px;
+    height: 40px;
+  }
+
+  .name{
+  font-size: 18px;
+  }
+
+  .proffession{
+  font-size: 18px;
+  }
+
+  .description{
+    font-size: 18px;
+    height: 94px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 18px;
+    margin-left: 30%;
+  }
+
+  .Opinions{
+    font-size: 18px;
+  }
+
+  .historial{
+    font-size: 18px;
+  }
+
+  .misp{
+    font-size: 25px;
+  }
+
+  .crearp{
+    font-size: 18px;
+  }
+}
+
+/*Para pantallas L*/
+@media only screen and (max-width: 899px) {
+  .profile{
+    border: 2px solid rebeccapurple;
+  }
+
+  .edit{
+    width: 40px;
+    height: 40px;
+  }
+
+  .name{
+    font-size: 15px;
+  }
+  
+    .proffession{
+    font-size: 15px;
+  }
+
+    .description{
+      font-size: 15px;
+      height: 120px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 15px;
+    margin-left: 30%;
+  }
+
+  .Opinions{
+    font-size: 15px;
+  }
+
+  .historial{
+    font-size: 15px;
+  }
+
+  .misp{
+    font-size: 22px;
+  }
+
+  .crearp{
+    font-size: 15px;
+  }
+}
+
+/*Para pantallas M*/
+@media only screen and (max-width: 700px) {
+  .profile{
+    border: 2px solid green;
+   }
+
+    .name{
+      font-size: 14px;
+    }
+
+    .edit{
+      width: 35px;
+      height: 35px;
+    }
+    
+      .proffession{
+      font-size: 14px;
+    }
+  
+      .description{
+        font-size: 14px;
+        height: 120px;
+    }
+
+    .chat{
+      width: 120%;
+      height: 120%;
+    }
+  
+    .report{
+      font-size: 14px;
+      margin-left: 20%;
+    }
+
+    .Opinions{
+      font-size: 14px;
+    }
+
+    .historial{
+      font-size: 14px;
+    }
+
+    .misp{
+      font-size: 20px;
+    }
+
+    .crearp{
+      font-size: 14px;
+    }
+
+  .publicacion{
+      width: 85%;
+  }
+}
+
+/*Para pantallas S*/
+@media only screen and (max-width: 600px) {
+  .profile{
+    border: 2px solid darkcyan;
+  }
+
+  .name{
+    font-size: 14px;
+  }
+
+  .edit{
+    width: 35px;
+    height: 35px;
+  }
+  
+    .proffession{
+    font-size: 14px;
+  }
+
+    .description{
+      font-size: 14px;
+      height: 150px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 14px;
+    margin-left: 20%;
+  }
+
+  .Opinions{
+    font-size: 14px;
+  }
+
+  .historial{
+    font-size: 12px;
+  }
+
+  .misp{
+    font-size: 18px;
+  }
+
+  .crearp{
+    font-size: 14px;
+  }
+
+.publicacion{
+    width: 85%;
+}
+}
+
+/*Para pantallas XS*/
+@media only screen and (max-width: 500px) {
+  .profile{
+    border: 2px solid palevioletred;
+  }
+
+  .name{
+    font-size: 14px;
+  }
+
+  .edit{
+    width: 35px;
+    height: 35px;
+  }
+  
+    .proffession{
+    font-size: 14px;
+  }
+
+    .description{
+      font-size: 12px;
+      height: 160px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 14px;
+    margin-left: 20%;
+  }
+
+  .Opinions{
+    font-size: 14px;
+  }
+
+  .Space{
+    flex-direction: column;
+}
+
+.historiales{
+  flex-direction: row;
+  width: 50%;
+  margin-left: 10%;
+}
+
+  .historial{
+    font-size: 10px;
+  }
+
+  .misp{
+    font-size: 18px;
+  }
+
+  .crearp{
+    font-size: 14px;
+  }
+
+.publicacion{
+    width: 85%;
+}
+}   
