--- a/Perfil Publico Vendedor/perfilpublicovendedor.css
+++ b/Perfil Publico Vendedor/perfilpublicovendedor.css
@@ -24,15 +24,15 @@ header{
 }
 
 .return svg{
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
 }
 
 .return{
-  width: 34px;
-  height: 34px;
+  width: 3%;
+  height: 6%;
   padding: 2px;
-  margin-left: 10px;
+  margin-left: 2%;
   position: absolute;
   cursor: pointer;
   z-index: 100;
@@ -51,12 +51,11 @@ header{
 }
 
 .profile {
-  margin: 10px;
-  margin-bottom: 5px;
-  margin-left: 0px;
+  margin: 1%;
+  margin-bottom: 2%;
   border-radius: 50%;
-  width: 180px;
-  height: 180px;
+  width: 15%;
+  height: 15%;
   object-fit: cover;
   background: #0a1319;
   border: 2px solid #0A1319;
@@ -64,35 +63,39 @@ object-fit: cover;
   }
 
   .calificación{
-    height: 180px;
+    margin: 1%;
+    width: 3.5%;
   }
 
 .information{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 10px;
+    margin-top: 2%;
+    margin-left: 1%;
+    width: 30%;
 }
 
-  .name{
-    width: 400px;
-    height: 40px;
-    margin-top: 10px;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
-    border-radius: 5px;
-    background: #010B14;
-  }
+.name{
+  position: relative;
+  width: 350px;
+  height: 40px;
+  margin: 10px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
+  border-radius: 5px;
+  background: #010B14;
+}
 
   .proffession{
-    width: 400px;
-    height: 40px;
-    margin-top: 5px;
-    font-size: 18px;
+    width: 100%;
+    height: auto;
+    padding: 1%;
+    margin-top: 2%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -103,22 +106,22 @@ object-fit: cover;
   }
 
   .chatyreport{
-    margin-top: 5px;
+    margin-top: 3%;
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
 .chat svg{
+  display: flex;
     fill: #A7A7A7;
-    width: 30px;
-    height: 30px;
+    width: 150%;
+    height: 150%;
     display: block;
 }
 
   .chat{
-    margin-right: 15px;
-    padding: 5px;
+    display: flex;
     cursor: pointer;
     outline: none;
     text-decoration: none;
@@ -131,7 +134,6 @@ object-fit: cover;
   }
 
   .report{
-    font-size: 18px;
     cursor: pointer;
     outline: none;
     text-decoration: none;
@@ -144,10 +146,10 @@ object-fit: cover;
   }
 
 .description{
-    margin-top: 10px;
-    width: 500px;
-    height: 94px;
-    margin-left: 20px;
+    margin-top: 2.3%;
+    margin-left: 2%;
+    margin-right: 1%;
+    width: 40%;
     padding: 5px 10px;
     display: flex;
     align-items: center;
@@ -164,7 +166,7 @@ object-fit: cover;
 
 .Opinions{
 overflow-y: auto;
-width: 800px;
+width: 70%;
 height: 200px;
 padding: 5px 10px;
 box-shadow: 0 0 10px rgba(144, 162, 177, 0.3);
@@ -173,32 +175,31 @@ background: #010B14;
 }
 
 .publicaciones{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; 
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 50;
+  justify-content: space-around; 
+  gap: 20px;
 }
 
 .publicacion{
-margin-right: 10px;
 margin-top: 10px;
-margin-left: 10px;
+margin-left: 1%;
+margin-right: 1%;
 margin-bottom: 30px;
-width: 550px;
+width: 46.5%;
 height: 265px;
 position: relative;
 border-radius: 5px;
 }
 
 .imgprin{
-margin-top: 5px;
-margin-left: 5px;
-margin-right: 5px;
+margin-top: 1%;
+margin-left: 1%;
+margin-right: 1%;
 border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 340px;
-height: 200px;
+width: 60%;
+height: 75%;
 object-fit: cover;
 position: absolute;
 top: 0;
@@ -210,37 +211,51 @@ justify-content: center;
 
 .secundaries{
 position: absolute;
-top: 0;
-left: 350px;
+left: 62%;
+height: 76%;
+width: 37%;
 display: flex;
 flex-direction: column;
-}
-
-.imgsec{
-margin-top: 5px;
-margin-right: 5px;
-border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 195px;
-height: 97.5px;
 object-fit: cover;
 }
 
-.descripcion{
-    margin: 5px;
-    width: 540px;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    background: #010b14;
-    border: 1px solid #031828;
-    box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+.imgsec{
+margin-top: 3%;
+margin-right: 1%;
+border-radius: 5px;
+width: 99%;
+height: 47.5%;
+object-fit: cover;
+}
+
+.infopubli{
+  width: 97%;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding-left: 10px;
+  border-radius: 5px;
+  background: #010b14;
+  border: 1px solid #031828;
+  box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+  text-align: left;
+}
+
+.titulop{
+margin: 0;
+height: 15px;
+}
+
+.descripcionp{
+  display: flex;
+justify-content: flex-start;
+margin: 0;
+margin-top: 5px;
+height: auto;
 }
 
 button:hover{
@@ -249,3 +264,173 @@ button:hover{
   transform: translateY(-2px);
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
+
+
+
+
+
+
+
+
+
+/*Para pantallas XL*/
+@media only screen and (min-width: 900px) {
+  .name{
+  font-size: 18px;
+  }
+
+  .proffession{
+  font-size: 18px;
+  }
+
+  .description{
+    font-size: 18px;
+    height: 94px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 18px;
+    margin-left: 30%;
+  }
+
+  .Opinions{
+    font-size: 18px;
+  }
+}
+
+/*Para pantallas L*/
+@media only screen and (max-width: 899px) {
+  .name{
+    font-size: 15px;
+  }
+  
+    .proffession{
+    font-size: 15px;
+  }
+
+    .description{
+      font-size: 15px;
+      height: 120px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 15px;
+    margin-left: 30%;
+  }
+
+  .Opinions{
+    font-size: 15px;
+  }
+}
+
+/*Para pantallas M*/
+@media only screen and (max-width: 700px) {
+    .name{
+      font-size: 14px;
+    }
+    
+      .proffession{
+      font-size: 14px;
+    }
+  
+      .description{
+        font-size: 14px;
+        height: 120px;
+    }
+
+    .chat{
+      width: 120%;
+      height: 120%;
+    }
+  
+    .report{
+      font-size: 14px;
+      margin-left: 20%;
+    }
+
+    .Opinions{
+      font-size: 14px;
+    }
+
+  .publicacion{
+      width: 85%;
+  }
+}
+
+/*Para pantallas S*/
+@media only screen and (max-width: 600px) {
+  .name{
+    font-size: 14px;
+  }
+  
+    .proffession{
+    font-size: 14px;
+  }
+
+    .description{
+      font-size: 14px;
+      height: 150px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 14px;
+    margin-left: 20%;
+  }
+
+  .Opinions{
+    font-size: 14px;
+  }
+
+.publicacion{
+    width: 85%;
+}
+}
+
+/*Para pantallas XS*/
+@media only screen and (max-width: 500px) {
+  .name{
+    font-size: 14px;
+  }
+  
+    .proffession{
+    font-size: 14px;
+  }
+
+    .description{
+      font-size: 12px;
+      height: 160px;
+  }
+
+  .chat{
+    width: 120%;
+    height: 120%;
+  }
+
+  .report{
+    font-size: 14px;
+    margin-left: 20%;
+  }
+
+  .Opinions{
+    font-size: 14px;
+  }
+
+.publicacion{
+    width: 85%;
+}
+}   
